# manga-tui

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  bacon.toml  flake.nix  manga-tui-config.toml  result  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
benches/: utils.rs
data_test/mangakakalot/: chapter_page.html  home_page.html  manga_page.html  search_page.html
data_test/manganato/: chapter_page.html  home_page.html  manga_page.html  search.html
data_test/weebcentral/: chapter_page.txt  chapter_page_images.txt  full_chapters.txt  home_page.txt  home_page_v2.txt  manga_page.txt  search_page_no_more_result.txt  search_page_paginated.txt
docs/: anilist.md
scripts/: precommit.sh
src/: backend.rs  cli.rs  common.rs  config.rs  filter.rs  global.rs  lib.rs  logger.rs  main.rs  utils.rs  view.rs
src/backend/: api_responses.rs  cache.rs  database.rs  database_scheme.md  download.rs  error_log.rs  fetch.rs  filter.rs  history.rs  html_parser.rs  manga_downloader.rs  manga_provider.rs  migration.rs  release_notifier.rs  secrets.rs  tracker.rs  tui.rs
src/backend/cache/: in_memory.rs
src/backend/html_parser/: scraper.rs
src/backend/manga_downloader/: cbz_downloader.rs  epub_downloader.rs  pdf_downloader.rs  raw_images.rs  zip_downloader.rs
src/backend/manga_provider/: filters.rs  mangadex.rs  mangakakalot.rs  manganato.rs  weebcentral.rs
src/backend/manga_provider/mangadex/: api_responses.rs  filter.rs  filter_widget.rs  filters.rs
src/backend/manga_provider/mangadex/filters/: api_parameter.rs  cache.rs  filter_provider.rs
src/backend/manga_provider/mangakakalot/: filter_state.rs  filter_widget.rs  response.rs
src/backend/manga_provider/manganato/: filter_state.rs  filter_widget.rs  response.rs
src/backend/manga_provider/weebcentral/: filter_state.rs  filter_widget.rs  response.rs
src/backend/secrets/: anilist.rs  keyring.rs
src/backend/tracker/: anilist.rs
src/view/: app.rs  pages.rs  tasks.rs  widgets.rs
src/view/pages/: feed.rs  home.rs  manga.rs  reader.rs  search.rs
src/view/tasks/: feed.rs  manga.rs  reader.rs  search.rs
src/view/widgets/: feed.rs  filter_widget.rs  home.rs  manga.rs  reader.rs  search.rs
src/view/widgets/filter_widget/: state.rs
