[package]
name = "manga-tui"
version = "0.5.0"
edition = "2021"
authors = ["Josue <josuebarretogit@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/josueBarretogit/manga-tui"
repository = "https://github.com/josueBarretogit/manga-tui"
description = "Terminal-based manga reader and downloader with image rendering support"
keywords = ["cli", "command-line", "terminal", "tui" ]
categories = ["command-line-interface", "Command line utilities", ]
license = "MIT"
exclude = [
  "public/*",
  "docs/*",
  "data_test/*"
]

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets", "palette", "unstable-widget-ref"] }
ratatui-image = {  version = "2.0.1", features = ["rustix"]}
throbber-widgets-tui = "0.8.0"
tui-input = "0.11.1"
tui-widget-list = "0.13.2"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
image = "0.25.5"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
strum = "0.27.0"
strum_macros = "0.27"
color-eyre = "0.6.2"
futures = "0.3.31"
bytes = { version = "1", features = ["serde"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
chrono = "0.4.39"
open = "5"
rusqlite = { version = "0.33.0", features = ["bundled"] }
clap = { version = "4.5.28", features = ["derive", "cargo"] }
zip = "2.2.2"
toml = "0.8.20"
epub-builder = "0.8.0"
http = "1.2"
keyring = { version = "3", features = ["apple-native", "windows-native",  "sync-secret-service"] }
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.5" 

[dev-dependencies]
httpmock = "0.7.0-rc.1"
pretty_assertions = "1.4.1"
rusty-hook = "0.11.2"
fake = "3.1.0"
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
http = "1.2"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_HiDpi"]}

[profile.release]
codegen-units = 1
lto = "fat"
